--- a/bio.html
+++ b/bio.html
@@ -22,12 +22,12 @@
 	
 		<img src="ceo.jpg">
 		<nav>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			This site is established in may 2 2019. The founder of this site is MR.Isaac thapa. 
+			"The journey of this site has been amazing this was only possible due to our 
+			module teachers, as well as university of northampton by assigning to develop a 
+			creative website lke this.	
+			
+
 		</nav>
 		
 	</div>
@@ -36,12 +36,14 @@
 		</h4>
 	<div class="sec">
 		<nav>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			purpose of this site is to provide true news for the viewers.
+			this site also provide advertisement platform for the sponsership.
+			this web site has different section like reviews glossry  tutorails
+			which have the information also about web development. the online job is registered
+			in this website. the website itself contain so many section therefore for a viewer the main purpose
+			of this news website is user understanding and easiness.
+			thank you
+
 		</nav>
 		
 	</div>
