--- a/bio.html
+++ b/bio.html
@@ -6,11 +6,33 @@
 </head>
 	<h1>
 		ALPHA NEWS THE BELIEVE OF NATION
-		<img src="horse1.png">
+		<div class="image">
+			<img src="horse1.png">
+		</div>
+		
 		<div class="search">
 			<input type="text" name="">
 
 	</h1>
+		<div class="first">
+			<ul>
+			<li><a href="#">Home</a>
+			 	<ul class="menu">
+			 		<li><a href="bio.html">Bio </a></li>
+			 		<li><a href="team.html">Department </a></li>
+			 	</ul>
+
+			</li>
+			<li><a href="reviews.html">Reviews</a></li>
+			<li><a href="glossary.html">Glossary</a></li>
+			<li><a href="jobs.html">Jobs</a></li>
+			<li><a href="tutorials.html">Tutorials</a></li>
+
+			</ul>
+			
+	</div>
+
+
 <body>
 	<h2>
 		BIOGRAPHY
@@ -18,7 +40,7 @@
 		<h3>
 			CEO OF THE ALPHA NEWS
 		</h3>
-	<div class="first">
+	<div class="fir">
 	
 		<img src="ceo.jpg">
 		<nav>
