--- a/bio.html
+++ b/bio.html
@@ -1,81 +1,82 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>bio</title>
-	<link rel="stylesheet" type="text/css" href="mybio.css">
-</head>
+	<!DOCTYPE html>
+	<html>
+	<head>
+		<title>bio</title>
+		<link rel="stylesheet" type="text/css" href="mybio.css"><!-- this is the link for the bio. html with mybio.css-->
+
+	</head>
 	<h1>
-		ALPHA NEWS THE BELIEVE OF NATION
+		ISAAC NEWS THE BELIEVE OF NATION<!--header of the page-->
+
 		<div class="image">
-			<img src="horse1.png">
+			<img src="horse1.png"><!-- the image of the logo given in a class-->
 		</div>
-		
+
 		<div class="search">
-			<input type="text" name="">
+			<input type="text" name=""><!--the input text box for search display-->
 
-	</h1>
-		<div class="first">
+		</h1>
+		<div class="first"><!-- this div represent the unorder list for the navigation bar-->
 			<ul>
-			<li><a href="#">Home</a>
-			 	<ul class="menu">
-			 		<li><a href="bio.html">Bio </a></li>
-			 		<li><a href="team.html">Department </a></li>
-			 	</ul>
+				<li><a href="#">Home</a>
+					<ul class="menu">
+						<li><a href="bio.html">Bio </a></li>
+						<li><a href="team.html">Department </a></li>
+					</ul>
 
-			</li>
-			<li><a href="reviews.html">Reviews</a></li>
-			<li><a href="glossary.html">Glossary</a></li>
-			<li><a href="jobs.html">Jobs</a></li>
-			<li><a href="tutorials.html">Tutorials</a></li>
+				</li>
+				<li><a href="reviews.html">Reviews</a></li>
+				<li><a href="glossary.html">Glossary</a></li>
+				<li><a href="jobs.html">Jobs</a></li>
+				<li><a href="tutorials.html">Tutorials</a></li>
 
 			</ul>
-			
-	</div>
+
+		</div>
 
 
-<body>
-	<h2>
-		BIOGRAPHY
-	</h2>
-		<h3>
-			CEO OF THE ALPHA NEWS
-		</h3>
-	<div class="fir">
-	
-		<img src="ceo.jpg">
-		<nav>
-			This site is established in may 2 2019. The founder of this site is MR.Isaac thapa. 
-			"The journey of this site has been amazing this was only possible due to our 
-			module teachers, as well as university of northampton by assigning to develop a 
-			creative website lke this.	
-			
+		<body>
+			<h2><!-- header represent biography-->
+				BIOGRAPHY
+			</h2>
+			<h3><!--header representation-->
+				CEO OF THE ISAAC NEWS
+			</h3>
+			<div class="fir"><!-- the class fir represent both image and discription-->	
+				<img src="ceo.jpg">
+				<nav>
+					This site is established in may 2 2019. The founder of this site is MR.Isaac thapa. 
+					"The journey of this site has been amazing this was only possible due to our 
+					module teachers, as well as university of northampton by assigning to develop a 
+					creative website lke this.	
 
-		</nav>
-		
-	</div>
-	<h4>
-			PURPOSES OF THIS SITE
-		</h4>
-	<div class="sec">
-		<nav>
-			purpose of this site is to provide true news for the viewers.
-			this site also provide advertisement platform for the sponsership.
-			this web site has different section like reviews glossry  tutorails
-			which have the information also about web development. the online job is registered
-			in this website. the website itself contain so many section therefore for a viewer the main purpose
-			of this news website is user understanding and easiness.
-			thank you
 
-		</nav>
-		
-	</div>
-</body>
+				</nav>
 
-		
+			</div>
+			<h4><!-- header representation-->
+				PURPOSES OF THIS SITE
+			</h4>
+			<div class="sec"><!-- the class fir represent  discription-->	
+				<nav>
+					purpose of this site is to provide true news for the viewers.
+					this site also provide advertisement platform for the sponsership.
+					this web site has different section like reviews glossry  tutorails
+					which have the information also about web development. the online job is registered
+					in this website. the website itself contain so many section therefore for a viewer the main purpose
+					of this news website is user understanding and easiness.
+					thank you
 
-<footer>
-	<div class="end">
-		alpha alpha
-	</div>
-</footer>
-</html>
+				</nav>
+
+			</div>
+		</body>
+
+
+
+		<footer>
+			<div class="end"><!-- this footer only contain that is displayed black colour background just for the a little bar show-->
+				ISAAC ISAAC
+			</div>
+		</footer>
+		</html>
