--- a/bio.html
+++ b/bio.html
@@ -1,20 +1,25 @@
 	<!DOCTYPE html>
-	<html>
+	<html lang="en">
 	<head>
 		<title>bio</title>
 		<link rel="stylesheet" type="text/css" href="mybio.css"><!-- this is the link for the bio. html with mybio.css-->
-
+		<meta charset="utf-8">
 	</head>
-	<h1>
+
+
+
+		<body>
+
+			<h1>
 		ISAAC NEWS THE BELIEVE OF NATION<!--header of the page-->
 
-		<div class="image">
-			<img src="horse1.png"><!-- the image of the logo given in a class-->
-		</div>
+		<b class="image">
+			<img src="horse1.png" alt="hello"><!-- the image of the logo given in a class-->
+		</b>
 
-		<div class="search">
-			<input type="text" name=""><!--the input text box for search display-->
-
+		<b class="search">
+			<input type="text" name="search"><!--the input text box for search display-->
+		</b>	
 		</h1>
 		<div class="first"><!-- this div represent the unorder list for the navigation bar-->
 			<ul>
@@ -32,10 +37,9 @@
 
 			</ul>
 
-		</div>
+		</div>	
 
 
-		<body>
 			<h2><!-- header represent biography-->
 				BIOGRAPHY
 			</h2>
@@ -43,7 +47,7 @@
 				CEO OF THE ISAAC NEWS
 			</h3>
 			<div class="fir"><!-- the class fir represent both image and discription-->	
-				<img src="ceo.jpg">
+				<img src="ceo.jpg" alt="hello">
 				<nav>
 					This site is established in may 2 2019. The founder of this site is MR.Isaac thapa. 
 					"The journey of this site has been amazing this was only possible due to our 
@@ -70,13 +74,13 @@
 				</nav>
 
 			</div>
-		</body>
 
-
-
-		<footer>
+				<footer>
 			<div class="end"><!-- this footer only contain that is displayed black colour background just for the a little bar show-->
 				ISAAC ISAAC
 			</div>
 		</footer>
-		</html>
+
+
+		</body>
+	</html>
